# GOIT-Python_Web-HW-13

./: README.md  pyproject.toml
migrations/versions/: 232dd5b91d0f_init.py  240d0bb4e548_add_field_confirmed.py
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16398  16399  16401  16403  16404  16406  16412  16413  16415  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/repository/: contacts.py
src/routes/: contacts.py  users.py
src/services/: auth.py  email.py
